# sparekeys

./: .bumpversion.cfg  .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py  sk
.github/workflows/: test_and_release.yml
docs/: Makefile  basic_usage.rst  conf.py  index.rst
sparekeys/: __init__.py  default_config.toml  main.py
tests/: test_load_plugins.py
