[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sparekeys"
author = "Kale Kundert"
author-email = "kale@thekunderts.net"
home-page = 'https://github.com/kalekundert/sparekeys'
description-file = 'README.rst'
requires-python = "~=3.6"
requires = [
  'inform>=1.14',
  'shlib>=1.0',
  'setuptools',
  'toml',
  'appdirs',
  'docopt',
  'python-gnupg>=0.4.3',
]
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: MIT License',
]

[tool.flit.metadata.requires-extra]
test = [
  'pytest',
  'pytest-cov',
  'parametrize_from_file',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[tool.flit.metadata.urls]
'Documentation' = 'https://sparekeys.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/sparekeys'
'Bug Tracker' = 'https://github.com/kalekundert/sparekeys/issues'
'Continuous Integration' = 'https://github.com/kalekundert/sparekeys/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/sparekeys'

[tool.flit.scripts]
sparekeys = 'sparekeys:main'

[tool.flit.entrypoints."sparekeys.auth"]
getpass = 'sparekeys:auth_getpass'
avendesora = 'sparekeys:auth_avendesora'

[tool.flit.entrypoints."sparekeys.archive"]
ssh = 'sparekeys:archive_ssh'
gpg = 'sparekeys:archive_gpg'
file = 'sparekeys:archive_file'
emborg = 'sparekeys:archive_emborg'  # requires emborg>=1.2
avendesora = 'sparekeys:archive_avendesora'

[tool.flit.entrypoints."sparekeys.publish"]
scp = 'sparekeys:publish_scp'
mount = 'sparekeys:publish_mount'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
version_variable = 'sparekeys/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
